[package]
name = "password_list_hasher"
version = "0.1.1"
edition = "2021"
description = "A tool to hash a list of passwords"
authors = ["Alexander Voglsperger (MrMinemeet) <alex@wtf-my-code.works>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
sha1_smol = "1.0.0"
