[package]
name = "password_list_hasher"
version = "0.2.1"
edition = "2021"
description = "A tool to hash a list of passwords"
authors = ["Alexander Voglsperger (MrMinemeet) <alex@wtf-my-code.works>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
whirlpool = "0.10"
